tests/error/type_errors/unpack_generic_size.err
Error: Unpackable (at $FILE:11:13)
   | 
 9 | @guppy(module)
10 | def foo(xs: array[int, n]) -> int:
11 |     a, *bs = xs
   |              ^^ Expression of type `array[int, n]` cannot be unpacked

Note: Unpacking of iterable types like `array[int, n]` is only allowed if the
number of items yielded by the iterator is statically known. Here, the number of
items `n` is generic and can change between different function invocations.

Guppy compilation failed due to 1 previous error
